--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,12 @@
     --action-colour: #72f1c3;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     color: #000;
     background-color: var(--bg-colour);
