--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,17 @@
 
 :root {
     --font: #eee;
-    --bg-colour: #f5f5f3;
+    --bg-colour: #ffffff;
     --primary-colour: #7e3b98;
     --secondary-colour: #c499d0;
     --action-colour: #72f1c3;
+    
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: none;
 }
 
 body {
@@ -16,9 +23,7 @@ body {
 }
 
 @layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
+    
 }
 
 /* prettier-ignore */
@@ -35,4 +40,8 @@ body {
     .border-primary {border-color: var(--primary-colour);}
     .border-secondary {border-color: var(--secondary-colour);}
     .border-action {border-color: var(--action-colour);}
+}
+
+.roboto {
+    font-family: var(--font-roboto);
 }
